OpenRewrite, fix SQ issues and write tests